made loading text be monospace to prevent text shifting

--- a/css/sudoku.css
+++ b/css/sudoku.css
@@ -201,6 +201,7 @@ header {
 
   & > p {
     font-size: 2vh;
+    font-family: monospace;
     color: var(--foreground-color-secondary);
     margin-top: auto;
   }
